--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,22 @@
 body {
-  margin: 0;
+  background: #ccd6dd;
 }
-h1 {
-  2em;
-  color: #ccd6dd;
+
+p {
+  text-size: .75em;
+  line-height: 1em;
+}
+
+img {
+  width: 100%;
+}
+
+ul {
+
+}
+
+li {
+  list-style: none;
 }
 
 #myCarousel {
@@ -13,6 +26,39 @@ h1 {
 }
 
 .container {
-  margin: 0;
+  margin: auto;
   display: block;
+}
+
+.first {
+  background: white;
+  float:left;
+  height: 400px;
+}
+
+.second {
+  float: left;
+  background: white;
+  height: 400px;
+}
+
+.third {
+  float: left;
+  background: white;
+  height: 400px;
+  padding: 2%;
+}
+
+.col-xs-12{
+  background: white;
+  margin: 20px;
+  padding: 30px;
+}
+
+/*---------- MEDIA QUERIES --------*/
+
+@media screen and (min-width: 900px){
+  body {
+    width: 900px;
+  }
 }
