--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   background: #ccd6dd;
+  text-align: center;
 }
 
 p {
@@ -11,41 +12,37 @@ img {
   width: 100%;
 }
 
-ul {
-
-}
-
-li {
-  list-style: none;
+a {
+  text: none;
 }
 
 #myCarousel {
-  text-align: center;
-  margin: 0;
+  margin: auto;
   background: #ccd6dd;
 }
 
 .container {
-  margin: auto;
-  display: block;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .first {
   background: white;
   float:left;
-  height: 400px;
+  height: 450px;
 }
 
 .second {
   float: left;
   background: white;
-  height: 400px;
+  height: 450px;
 }
 
 .third {
   float: left;
   background: white;
-  height: 400px;
+  height: 450px;
   padding: 2%;
 }
 
